kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: books-app
  labels:
    name: books-app
