kubernetes/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-backend
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-backend
  template:
    metadata:
      labels:
        app: books-backend
    spec:
      containers:
        - name: books-backend
          image: gochot/books-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: books-backend
  namespace: books-app
spec:
  selector:
    app: books-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
