kubernetes/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-frontend
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-frontend
  template:
    metadata:
      labels:
        app: books-frontend
    spec:
      containers:
        - name: books-frontend
          image: gochot/books-frontend-k8s:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: books-frontend
  namespace: books-app
spec:
  selector:
    app: books-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
